api-gateway-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - image: 781862615829.dkr.ecr.us-east-1.amazonaws.com/spring-petclinic-cloud-api-gateway:03b75489252d82eff35d155031b3692cc23dbb2c
        name: api-gateway
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
          initialDelaySeconds: 90
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
          initialDelaySeconds: 15
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 8080
      restartPolicy: Always
status: {}
