vets-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vets-service
  name: vets-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  strategy: {}
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
      - image: 781862615829.dkr.ecr.us-east-1.amazonaws.com/spring-petclinic-cloud-vets-service:03b75489252d82eff35d155031b3692cc23dbb2c
        name: vets-service
        imagePullPolicy: Always
#         livenessProbe:
#           httpGet:
#             port: 8080
#             path: /actuator/health/liveness
#           initialDelaySeconds: 90
#           periodSeconds: 5
#         readinessProbe:
#           httpGet:
#             port: 8080
#             path: /actuator/health/readiness
#           initialDelaySeconds: 15
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        resources:
          limits:
            memory: 2Gi
            cpu: 2000m
          requests:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
