api-gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  namespace: spring-petclinic
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 8080
  selector:
    app: api-gateway
  type: LoadBalancer
status:
  loadBalancer: {}
