vets-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vets-service
  name: vets-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  namespace: spring-petclinic
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app: vets-service
status:
  loadBalancer: {}
