api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: spring-petclinic
  annotations:
    # kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/certificate-arn: 
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/group:  # name of my app
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: spring-petclinic
    alb.ingress.kubernetes.io/subnets:  subnet-b3cddff9, subnet-0eace352
    alb.ingress.kubernetes.io/load-balancer-name: spring-petclinic-api-gateway
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:781862615829:certificate/9a58d937-7dd8-4bb6-bad3-ff378846d56c
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
  labels:
    app: api-gateway
spec:
  rules:
    - host: petclinic.ex001.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
